# Core

./: .gitignore  .gitmodules  CMakeLists.txt
Core/: Application.cpp  Application.h  Assert.h  Base.h  CMakeLists.txt  Compiler.h  Core.cpp  FileSystem.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  Platform.h  SmartPointer.h  Window.h  pch.h
Core/Application/: Application.cpp  Application.h
Core/Events/: EngineEvents.h  EventBus.h  InputEvent.h
Core/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Core/Math/: Mat4.h  Math.h  Transform.h  Vec2.h  Vec3.h  Vec4.h
Core/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
